Исправил типы данных, выгрузил данные из csv в таблицу

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 
 spring.datasource.username=postgres
 spring.datasource.password=theroot
-spring.jpa.show-sql = false
+spring.jpa.show-sql = true
 spring.jpa.hibernate.ddl-auto = create
 # create
 # none
