--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,8 +7,8 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 
 spring.datasource.username=postgres
 spring.datasource.password=theroot
-spring.jpa.show-sql = true
-spring.jpa.hibernate.ddl-auto = create
+spring.jpa.show-sql = false
+spring.jpa.hibernate.ddl-auto = none
 # create
 # none
 # update
